--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ APP_PASSWORD=Admin1234!
 APP_DATABASE=autill
 
 ANGULAR_URL=http://localhost:4200
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_USERNAME=oscarplumariegacebo@gmail.com
+EMAIL_PASSWORD=quln gqgu hjag ztxv
+
+JWT_TOKEN_SECRET=
