--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_DATABASE=autill
 ANGULAR_URL=http://localhost:4200
 
 EMAIL_HOST=smtp.gmail.com
-EMAIL_USERNAME=oscarplumariegacebo@gmail.com
-EMAIL_PASSWORD=quln gqgu hjag ztxv
+EMAIL_USERNAME=x@gmail.com
+EMAIL_PASSWORD=x
 
 JWT_TOKEN_SECRET=
