--- a/.env
+++ b/.env
@@ -1,13 +1,27 @@
-APP_HOST=localhost
-APP_PORT=3306
-APP_USER=root
-APP_PASSWORD=Admin1234!
-APP_DATABASE=autill
+APP_HOST=ol1s6.h.filess.io
+APP_PORT=3307
+APP_USER=Autill_adultcloud
+APP_PASSWORD=6d865d059d56f7e53c53b1b88df68919a352876f
+APP_DATABASE=Autill_adultcloud
 
 ANGULAR_URL=http://localhost:4200
 
 EMAIL_HOST=smtp.gmail.com
-EMAIL_USERNAME=x@gmail.com
-EMAIL_PASSWORD=x
+EMAIL_USERNAME=oscarplumariegacebo@gmail.com
+EMAIL_PASSWORD=quln gqgu hjag ztxv
 
 JWT_TOKEN_SECRET=
+
+#APP_HOST=localhost
+#APP_PORT=3306
+#APP_USER=root
+#APP_PASSWORD=Admin1234!
+#APP_DATABASE=autill
+
+#ANGULAR_URL=http://localhost:4200
+
+#EMAIL_HOST=smtp.gmail.com
+#EMAIL_USERNAME=x@gmail.com
+#EMAIL_PASSWORD=x
+
+#JWT_TOKEN_SECRET=
